# ironrace

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml  tasks.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
benchmarks/: baseline_python.py  bench_at_scale.py  bench_context_prep.py  bench_vector_search.py
docs/: ARCHITECTURE.md  BENCHMARKS.md  PROBLEM.md  QUICKSTART.md
examples/: batch_research.py  ironrace_rag.py  rag_chatbot.py  startup_evaluator.py  startup_evaluator_python.py
integrations/llama-index/: README.md  pyproject.toml
integrations/llama-index/benchmarks/: bench_real_codebase.py  bench_vs_simple.py
integrations/llama-index/llama_index/vector_stores/ironrace/: __init__.py  base.py
integrations/llama-index/tests/: test_integration.py  test_vector_store.py
python/ironrace/: __init__.py  _core.pyi  compiler.py  decorators.py  router.py  types.py
rust/src/: assembler.rs  json_fast.rs  lib.rs  pipeline.rs  tokenizer.rs  vector.rs
tests/: test_assembler.py  test_decorators.py  test_json.py  test_pipeline.py  test_tokenizer.py  test_vector.py
