[package]
name = "ironrace"
version = "0.1.1"
edition = "2021"
description = "Rust-powered context engine for AI agent pipelines"
license = "Apache-2.0"

[lib]
name = "_core"
crate-type = ["cdylib"]
path = "rust/src/lib.rs"

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
instant-distance = "0.6"
tokenizers = "0.20"
rayon = "1.10"
once_cell = "1"
