[package]
name = "ironrace"
version = "0.2.0"
edition = "2021"
description = "Rust-powered context engine for AI agent pipelines"
license = "Apache-2.0"

[lib]
name = "_core"
crate-type = ["cdylib"]
path = "rust/src/lib.rs"

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hnsw_rs = "0.3.4"
tokenizers = "0.20"
rayon = "1.10"
once_cell = "1"
