[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "ironrace"
version = "0.2.2"
description = "Rust-powered context engine for AI agent pipelines"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["rust", "llm", "rag", "vector-search", "context-engine", "pyo3"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/ironrace/ironrace"
Repository = "https://github.com/ironrace/ironrace"
Issues = "https://github.com/ironrace/ironrace/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "numpy>=1.24",
    "orjson>=3.9",
    "httpx>=0.25",
    "tiktoken>=0.5",
]

[tool.maturin]
python-source = "python"
module-name = "ironrace._core"
features = ["pyo3/extension-module"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
