[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llama-index-vector-stores-ironrace"
version = "0.1.0"
description = "IronRace Rust-accelerated vector store for LlamaIndex"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "llama-index-core>=0.11.0,<0.15.0",
    "ironrace>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["llama_index"]
